prepare to jdk19, fix file overriding